--- a/gcp/service/workflow_definition.yaml
+++ b/gcp/service/workflow_definition.yaml
@@ -23,7 +23,7 @@ main:
     - setFromCallResult:
         assign:
           - searchTerm: '${text.split(location, "-")[0]}'
-        nex: readWikipedia
+        next: readWikipedia
     - readWikipedia:
         call: http.get
         args:
