--- a/gcp/service/workflow_definition.yaml
+++ b/gcp/service/workflow_definition.yaml
@@ -5,40 +5,55 @@ main:
         switch:
           - condition: '${"searchTerm" in input}'
             assign:
-              - searchTerm: "${input.searchTerm}"
+              - searchTerm: '${input.searchTerm}'
             next: checkLanguageInInput
     - checkLanguageInInput:
         switch:
-          - condition: "${input.language != null}"
+          - condition: '${"language" in input}'
             assign:
-              - language: "${input.language}"
-            next: readWikipedia
-          - condition: "${input.language == null}"
-            next: readWikipediaDefaultLanguage
+              - language: '${input.language}'
+            next: getLocation
+          - condition: '${not ("language" in input)}'
+            next: getLocationDefaultLanguage
     - getLocation:
         call: sys.get_env
         args:
           name: GOOGLE_CLOUD_LOCATION
         result: location
+        next: setFromCallResult
     - setFromCallResult:
         assign:
           - searchTerm: '${text.split(location, "-")[0]}'
+        next: readWikipedia
+    - getLocationDefaultLanguage:
+        call: sys.get_env
+        args:
+          name: GOOGLE_CLOUD_LOCATION
+        result: location
+        next: setFromCallResultDefaultLanguage
+    - setFromCallResultDefaultLanguage:
+        assign:
+          - searchTerm: '${text.split(location, "-")[0]}'
+        next: readWikipediaDefaultLanguage
     - readWikipedia:
         call: http.get
         args:
           url: '${"https://" + language + ".wikipedia.org/w/api.php"}'
           query:
             action: opensearch
-            search: "${searchTerm}"
+            search: '${searchTerm}'
         result: wikiResult
-    - returnOutput:
-        return: "${wikiResult.body[1]}"
+        next: returnOutput
     - readWikipediaDefaultLanguage:
         call: http.get
         args:
-          url: '${"https://en.wikipedia.org/w/api.php"}'
+          url: 'https://en.wikipedia.org/w/api.php'
           query:
             action: opensearch
-            search: "${searchTerm}"
-            language: "en"
+            search: '${searchTerm}'
         result: wikiResult
+        next: returnOutputDefaultLanguage
+    - returnOutput:
+        return: '${wikiResult.body[1]}'
+    - returnOutputDefaultLanguage:
+        return: '${wikiResult.body[1]}'
